fixed the floats for the featured sections on desktop and made them visible on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -176,6 +176,9 @@ div.container.col-xs-11.col-centered {}
 .lead-margin-lg {margin-bottom:75px;}
 .lead a {text-decoration:none;}
 .st-content-inner {  display:table; width:100%; height:100%; min-height:100%;}
+.pasmin {float:right; padding-right: 85px;}
+.pasdec {float:left; padding-left: 85px;}
+
 
 
 /* -- Responsive max-width wrappers -- */
